# book-to-audiobook

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: bootstrap.sh
templates/: index.html
tests/: test_chapter_detection.py  test_model_cache.py  test_pause_cancel.py  test_pdf_extraction.py  test_smoke.py  test_voice_test.py
