[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "book-to-audiobook"
version = "0.1.0"
description = "Convert PDFs and EPUBs into MP3 audiobooks with a local Flask UI and multiple TTS backends."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "beautifulsoup4>=4.12.2",
  "boto3>=1.42.66",
  "flask>=3.1.3",
  "kokoro>=0.7.16",
  "num2words>=0.5.14",
  "numpy>=1.26.4,<3",
  "pydub>=0.25.1",
  "pymupdf>=1.24.0",
  "python-dotenv>=1.2.2",
  "requests>=2.32.5",
]

[project.scripts]
book-to-audiobook = "app:main"

[project.optional-dependencies]
ocr = [
  "easyocr>=1.7.0",
]
piper = [
  "piper-tts>=1.4.1",
]
supertonic = [
  "supertonic>=1.1.2",
]
huggingface = [
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "transformers>=4.57.6",
]
xtts = [
  "coqui-tts>=0.27.5",
  "huggingface-hub>=0.36.2",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
]
speecht5 = [
  "datasets>=4.7.0",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "transformers>=4.57.6",
]
all = [
  "coqui-tts>=0.27.5",
  "datasets>=4.7.0",
  "easyocr>=1.7.0",
  "huggingface-hub>=0.36.2",
  "piper-tts>=1.4.1",
  "supertonic>=1.1.2",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "transformers>=4.57.6",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
