[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "book-to-audiobook"
version = "0.1.0"
description = "Convert PDFs and EPUBs into MP3 audiobooks with a local Flask UI and multiple TTS backends."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "beautifulsoup4==4.14.3",
  "boto3==1.42.66",
  "flask==3.1.3",
  "kokoro==0.9.4",
  "num2words==0.5.14",
  "numpy==1.26.4",
  "pydub==0.25.1",
  "pymupdf==1.27.2",
  "python-dotenv==1.2.2",
  "requests==2.32.5",
]

[project.optional-dependencies]
ocr = [
  "easyocr==1.7.2",
]
piper = [
  "piper-tts==1.4.1",
]
supertonic = [
  "supertonic==1.1.2",
]
huggingface = [
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "transformers==5.3.0",
]
xtts = [
  "coqui-tts==0.27.5",
  "huggingface-hub==1.6.0",
  "torch==2.10.0",
  "torchaudio==2.10.0",
]
speecht5 = [
  "datasets==4.7.0",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "transformers==5.3.0",
]
all = [
  "coqui-tts==0.27.5",
  "datasets==4.7.0",
  "easyocr==1.7.2",
  "huggingface-hub==1.6.0",
  "piper-tts==1.4.1",
  "supertonic==1.1.2",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "transformers==5.3.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
